--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         <div id='container'>
             <div id='header'>
                 <a id='show-map' href='#' class='button'><span id='show-hide-details'>channel: nearby</span><img class='map desaturate' align='middle' /></a>
-                <span id='show-users' href='#' class='info'><span id='show-hide-users'>6 online</span></span>
+                <span class='info' id='num-online'>6 online</span>
                 <h1><a href='/'>tea orbit</a></h1>
             </div>
             <div id='chat'>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div id='channels'>
-                <a href='#' class='toggle'>▼ recent channels</a>
+                <a href='#' class='toggle'>recent channels</a>
                 <div class='inner'>
                 </div>
             </div>
