--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -29,7 +29,7 @@ input#submit { padding-right: 8px; }
 
 #chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; }
 #chat .inner { padding: 30px; }
-#chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 25px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; max-width: 600px; }
+#chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 25px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; }
 #chat .date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; }
 #chat .row:hover .date { color: #aaa; }
 #chat .name { color: #888; margin-right: 5px; }
