--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
     <body>
         <div id='container'>
             <div id='header'>
-                <a id='show-map' href='#' class='button'><span id='show-hide-details'>channel: nearby</span><img class='map desaturate' align='middle' /></a>
+                <a id='show-map' href='#' class='button'><span id='show-hide-details'>nearby</span><img class='map desaturate' align='middle' /></a>
                 <span class='info' id='num-online'>? online</span>
                 <h1><a href='/'>tea orbit</a></h1>
             </div>
