--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -27,7 +27,7 @@ input#type-here { width: 60% }
 input#name { width: 20%; }
 input#submit { padding-right: 8px; }
 
-#chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; }
+#chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; font-size: 13px; }
 #chat .inner { padding: 30px; }
 #chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 25px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; }
 #chat .date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; }
@@ -77,7 +77,6 @@ and (max-device-width : 568px) {
     #post input[name='name'] {  width: 60%; }
 
     #chat .date { display: none; color: #444; font-size: 12px; margin-left: 5px; }
-    #chat .row:hover .date { color: #aaa; display: inline-block; }
 }
 
 img.disabled-desaturate {
