--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div id='channels'>
-                <a href='#' class='toggle'>recent channels</a>
+                <a href='#' class='toggle'></a>
                 <div class='inner'>
                 </div>
             </div>
