--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -53,6 +53,8 @@ input#submit { padding-right: 8px; }
 #channels .channel .remove:hover { color: #faa; background: rgba(255,255,255,0.5); cursor: pointer; }
 
 
+#audio { position: absolute; left: 50%; margin-left: -15px; display: inline-block; line-height: 50px; cursor: pointer; }
+#audio:hover { color: #fff; }
 
 #map-expanded { display: none; position: fixed; top: 50px; right: 0; background: #777; padding: 20px; text-align: center; z-index: 100; color: #ddd; }
 #map-expanded img.map { display: inline-block; width: 350px; height: 350px; vertical-align: middle; margin: 12px; box-shadow: 0 0 5px 0 rgba(0,0,0,0.5); }
