--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
                         <input type='hidden' name='last_id' value='0' />
                         <input type='hidden' name='session' value='' />
                         <input type='hidden' name='chatroom' value='' />
-                        <input type='text' name='spiel' id='type-here' placeholder='Type your message' />
+                        <textarea name='spiel' id='type-here' placeholder='Type your message' rows='1'></textarea>
                         <input type='submit' value='Send' id='submit' />
                     </form>
                 </div>
