network reload is smooth as butter

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             window.networking = null;
             window.title = "tea orbit";
 
-            window.last_id = 0;
+            window.last_spiel_date = 0;
             window.latitude = null;
             window.longitude = null;
             window.gps_accuracy = null;
