--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         <div id='container'>
             <div id='header'>
                 <a id='show-map' href='#' class='button'><span id='show-hide-details'>nearby</span><img class='map desaturate' align='middle' /></a>
-                <span class='info' id='num-online'>? online</span>
+                <div class='info' id='num-online'>? online</div>
                 <span id='audio'></span>
                 <h1 id='logo'><a href='/'>tea orbit</a></h1>
             </div>
