--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.cookie.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.linkify.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.timeago.min.js'></script>
+        <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.autosize.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/modernizr.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/sockjs.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/basics.js'></script>
