--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -21,7 +21,8 @@ a:hover { border-bottom: 1px solid #666; }
 
 #post { position: absolute; bottom: 0; left: 0; background: #000; width: 100%; z-index: 100; }
 #post .inner { margin: 20px; position: relative; }
-#post input, #post textarea { background: #444; border: 1px solid #aaa; line-height: 20px; color: #fff; border-radius: 2px; text-indent: 5px; padding: 3px; }
+#post input, #post textarea { background: #444; border: 1px solid #aaa; line-height: 20px; color: #fff; border-radius: 2px; text-indent: 5px; padding: 3px; font-family: monospace; }
+#post textarea { font-family: monospace; max-height: 400px; }
 #post textarea { display: inline-block; width: 60%; vertical-align: bottom; }
 
 input#type-here { width: 60% }
