--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                         <input type='hidden' name='session' value='' />
                         <input type='hidden' name='chatroom' value='' />
                         <textarea name='spiel' id='type-here' placeholder='Type your message' rows='1'></textarea>
-                        <input type='submit' value='Send' id='submit' />
+                        <input type='submit' class='submit' value='Send' id='submit' />
                     </form>
                 </div>
             </div>
