--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -21,9 +21,10 @@ a:hover { border-bottom: 1px solid #666; }
 
 #post { position: absolute; bottom: 0; left: 0; background: #000; width: 100%; z-index: 100; }
 #post .inner { margin: 20px; position: relative; }
-#post input, #post textarea { background: #444; border: 1px solid #aaa; line-height: 20px; color: #fff; border-radius: 2px; text-indent: 5px; padding: 3px; font-family: monospace; }
-#post textarea { font-family: monospace; max-height: 400px; }
-#post textarea { display: inline-block; width: 60%; vertical-align: bottom; }
+#post input, #post textarea { background: #444; border: 1px solid #aaa; height: 21px; color: #fff; border-radius: 2px; padding: 3px 10px; font-family: monospace; line-height: 12px; display: inline-block; vertical-align: middle; }
+#post textarea { width: 60%; vertical-align: bottom; }
+#post .submit { height: 30px; }
+textarea { line-height: 1; }
 
 input#type-here { width: 60% }
 input#name { width: 20%; }
