--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/basics.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/ui.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/network.js'></script>
+        <script type='text/javascript' src='{{ STATIC_URL }}scripts/draw.js'></script>
         <script type='text/javascript'>
 
             window.networking = null;
