--- a/templates/index.html
+++ b/templates/index.html
@@ -76,9 +76,10 @@
                         <input type='hidden' name='last_id' value='0' />
                         <input type='hidden' name='session' value='' />
                         <input type='hidden' name='chatroom' value='' />
-                        <textarea name='spiel' id='type-here' placeholder='Type your message' rows='1'></textarea>
+                        <textarea name='spiel' id='type-here' placeholder='Type your message'></textarea>
                         <input type='submit' class='submit' value='Send' id='submit' />
                     </form>
+                    <!--<canvas id='drawing' width="500" height="300"></canvas>-->
                 </div>
             </div>
         </div>
