--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -1,5 +1,5 @@
 
-body, html { height: 100%; background: #333; margin: 0; padding: 0; color: #aaa; font-family: monospace; position: relative; overflow: hidden; }
+body, html { height: 100%; background: #333; margin: 0; padding: 0; color: #aaa; font-family: 'PT Mono',monospace; position: relative; overflow: hidden; }
 
 a, a:visited { color: #fff; text-decoration: none; }
 a:hover { border-bottom: 1px solid #666; }
@@ -9,9 +9,10 @@ a:hover { border-bottom: 1px solid #666; }
 #loader .inner { padding: 30px; }
 #loader .details { font-size: 12px; line-height: 20px; text-shadow: 1px 1px 0 #000; }
 #loader .title { line-height: 30px; font-size: 30px; margin-bottom: 20px; }
+#loader .title .error {  text-shadow: 2px 2px 0 #a00; }
 
-#header { position: absolute; top: 0; left: 0; width: 100%; background: #000;  font-family: monospace; z-index: 100; }
-#header h1 { margin: 0; padding: 0 30px; line-height: 50px; }
+#header { position: absolute; top: 0; left: 0; width: 100%; background: #000; z-index: 100; font-size: 15px; }
+#header h1 { margin: 0; padding: 0 30px; line-height: 50px; font-size: 25px; }
 
 #header .button, #header .info { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
 #header .button { background: #444; }
@@ -73,7 +74,7 @@ input#submit { padding-right: 8px; }
 
 #num-online { cursor: pointer; }
 #num-online:hover { color: #fff; }
-#online-users { padding: 10px 20px; background: #000; display: none; }
+#online-users { padding: 10px 20px; background: #000; display: none; z-index: 200; position: relative; }
 
 #drawing {  background: #fff; }
 
