--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
         <link rel='shortcut icon' href='#' />
         <meta name='viewport' content='width=device-width, user-scalable=no'>
         <link rel='shortcut icon' href='data:image/x-icon;,' type='image/x-icon'> 
