--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -8,11 +8,12 @@ a:hover { border-bottom: 1px solid #666; }
 #loader .loader-icon { position: absolute; height: 150px; top: 50%; margin-top: -75px; left: 50%; margin-left: -250px; width: 500px; background: rgba(255,255,255,0.5); color: #fff; text-shadow: 2px 2px 0 #000; box-shadow: 2px 2px 0 #000; }
 #loader .inner { padding: 30px; }
 #loader .details { font-size: 12px; line-height: 20px; text-shadow: 1px 1px 0 #000; }
-#loader .title { line-height: 30px; font-size: 30px; margin-bottom: 20px; }
+#loader .title { line-height: 30px; font-size: 30px; margin-bottom: 15px; }
 #loader .title .error {  text-shadow: 2px 2px 0 #a00; }
 
 #header { position: absolute; top: 0; left: 0; width: 100%; background: #000; z-index: 100; font-size: 14px; }
-#header h1 { margin: 0; padding: 0 30px; line-height: 50px; font-size: 25px; }
+#header h1 { margin: 0 0 0 20px; padding: 0 30px 0 0; line-height: 50px; font-size: 25px; }
+#header h1 a { background: url(../assets/tea-white.png) center left no-repeat; background-size: 30px 30px; padding-left: 45px; }
 
 #header .button, #header .info { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
 #header .button { background: #444; }
